@@ -10,7 +10,6 @@ mod accept;
 mod connect;
 mod into_transport;
 mod select;
-pub mod format;
 
 pub use accept::{Accept, Bind, Listener};
 pub use connect::Connect;
